import lcdClientMock from "renderer/connectors/lcdClientMock.js"
import delegationModule from "renderer/vuex/modules/delegation.js"

let mockRootState = {
  wallet: {
    address: lcdClientMock.addresses[0]
  },
  connection: {
    connected: true
  },
  config: {
    bondingDenom: `atom`
  },
  user: {
    atoms: 1000
  }
}

describe(`Module: Delegations`, () => {
  let state, actions, mutations

  beforeEach(() => {
    const module = delegationModule({ node: {} })
    state = module.state
    actions = module.actions
    mutations = module.mutations
  })

  it(`adds delegate to cart`, () => {
    mutations.addToCart(state, { id: `foo`, x: 1 })
    expect(state.delegates[0]).toEqual({
      id: `foo`,
      delegate: { id: `foo`, x: 1 },
      atoms: 0
    })
    expect(state.delegates.length).toBe(1)
  })

  it(`does not add delegate to cart if already exists`, () => {
    mutations.addToCart(state, { id: `foo` })
    mutations.addToCart(state, { id: `foo`, x: 1 })
    expect(state.delegates[0].id).toBe(`foo`)
    expect(state.delegates[0].x).toBe(undefined)
    expect(state.delegates.length).toBe(1)
  })

  it(`removes delegate from cart`, () => {
    mutations.addToCart(state, { id: `foo` })
    mutations.addToCart(state, { id: `bar` })
    mutations.removeFromCart(state, `foo`)
    expect(state.delegates[0]).toEqual({
      id: `bar`,
      delegate: { id: `bar` },
      atoms: 0
    })
    expect(state.delegates.length).toBe(1)
  })

  it(`sets committed atoms for delegate`, () => {
    mutations.addToCart(state, { id: `foo` })
    mutations.setCommittedDelegation(state, { candidateId: `foo`, value: 123 })
    expect(state.committedDelegates).toEqual({ foo: 123 })
  })

  it(`sets committed atoms for delegate to 0`, () => {
    mutations.addToCart(state, { id: `foo` })
    mutations.setCommittedDelegation(state, { candidateId: `foo`, value: 123 })
    mutations.setCommittedDelegation(state, { candidateId: `foo`, value: 0 })
    expect(state.committedDelegates).toEqual({})
  })

  describe(`fetch delegation data`, () => {
    let node, commit
    beforeEach(async () => {
      node = {
        getDelegations: jest.fn(
          () =>
            lcdClientMock.state.stake[lcdClientMock.addresses[0]].delegations
        ),
        getUndelegations: jest.fn(() => [
          {
            validator_addr: lcdClientMock.validators[0],
            balance: { amount: 1 },
            min_time: new Date().toUTCString()
          }
        ]),
        getRedelegations: jest.fn(
          () =>
            lcdClientMock.state.stake[lcdClientMock.addresses[0]].redelegations
        )
      }
      const module = delegationModule({
        node
      })
      state = module.state
      actions = module.actions
      mutations = module.mutations
      commit = jest.fn()

      await actions.getBondedDelegates(
        {
          state,
          rootState: mockRootState,
          commit,
          dispatch: jest.fn()
        },
        lcdClientMock.state.candidates
      )
    })

    it(`fetches bonded delegates`, async () => {
      expect(node.getDelegations).toHaveBeenCalled()
      expect(commit).toHaveBeenCalledWith(`setCommittedDelegation`, {
        candidateId: lcdClientMock.validators[0],
        value: 14
      })
      expect(commit).toHaveBeenCalledWith(
        `addToCart`,
        lcdClientMock.state.candidates[0]
      )
    })

    it(`fetches current undelegations`, async () => {
      expect(node.getUndelegations).toHaveBeenCalled()
      expect(commit).toHaveBeenCalledWith(`setUnbondingDelegations`, {
        validator_addr: lcdClientMock.validators[0],
        balance: { amount: 1 },
        min_time: new Date().toUTCString()
      })
    })

    it(`should remove dead delegations and undelegations`, async () => {
      mutations.setCommittedDelegation(state, {
        candidateId: lcdClientMock.validators[2],
        value: 1
      })
      mutations.setUnbondingDelegations(state, {
        validator_addr: lcdClientMock.validators[2],
        balance: {
          amount: 1
        }
      })
      expect(state.committedDelegates[lcdClientMock.validators[2]]).toBeTruthy()
      expect(
        state.unbondingDelegations[lcdClientMock.validators[2]]
      ).toBeTruthy()

      const commit = jest.fn()
      await actions.getBondedDelegates(
        {
          state,
          rootState: mockRootState,
          commit,
          dispatch: jest.fn()
        },
        lcdClientMock.state.candidates
      )

      expect(commit).toHaveBeenCalledWith(`setCommittedDelegation`, {
        candidateId: lcdClientMock.validators[2],
        value: 0
      })
      expect(commit).toHaveBeenCalledWith(`setUnbondingDelegations`, {
        validator_addr: lcdClientMock.validators[2],
        balance: { amount: 0 }
      })
    })
  })

  it(`submits delegation transaction`, async () => {
    let stakingTransactions = {}
    stakingTransactions.delegations = [
      {
        validator: lcdClientMock.state.candidates[0],
        atoms: 109
      },
      {
        validator: lcdClientMock.state.candidates[1],
        atoms: 456
      }
    ]
    const dispatch = jest.fn()

    await actions.submitDelegation(
      { rootState: mockRootState, state, dispatch, commit: jest.fn() },
      { stakingTransactions }
    )

    expect(dispatch.mock.calls).toMatchSnapshot()
  })

  it(`submits undelegation transaction`, async () => {
    let stakingTransactions = {}
    stakingTransactions.delegations = [
      {
        validator: lcdClientMock.state.candidates[0],
        atoms: -113
      },
      {
        validator: lcdClientMock.state.candidates[1],
        atoms: -356
      }
    ]
    const dispatch = jest.fn()

    await actions.submitDelegation(
      { rootState: mockRootState, state, dispatch, commit: jest.fn() },
      { stakingTransactions }
    )

    expect(dispatch.mock.calls).toMatchSnapshot()
  })

  it(`deletes undelegations that are 0`, async () => {
    mutations.setUnbondingDelegations(state, {
      validator_addr: `cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw`,
      balance: { amount: 0 }
    })
    expect(
      state.unbondingDelegations
        .cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
    ).toBeUndefined()
  })

  it(`should query delegated atoms on reconnection`, () => {
    state.loading = true
    const dispatch = jest.fn()
    actions.reconnected({ state, dispatch })
    expect(dispatch).toHaveBeenCalledWith(`getBondedDelegates`)
  })

  it(`should not query delegated atoms on reconnection if not stuck in loading`, () => {
    state.loading = false
    const dispatch = jest.fn()
    actions.reconnected({ state, dispatch })
    expect(dispatch).not.toHaveBeenCalledWith(`getBondedDelegates`)
  })

  it(`updating delegations should not update another users state after signing out and in again`, async () => {
    jest.useFakeTimers()

    const node = {
      getDelegations: jest.fn(
        () => new Promise(resolve => setTimeout(() => resolve([]), 10000))
      ),
      getUndelegations: jest.fn(() => []),
      getRedelegations: jest.fn(() => [])
    }
    const module = delegationModule({
      node
    })
    state = module.state
    actions = module.actions
    mutations = module.mutations
    const commit = jest.fn()

    let rootState = JSON.parse(JSON.stringify(mockRootState))
    actions.getBondedDelegates(
      {
        state,
        rootState,
        commit,
        dispatch: jest.fn()
      },
      lcdClientMock.state.candidates
    )

    rootState.wallet.address = `other_address`

    jest.runAllTimers()

    expect(commit).not.toHaveBeenCalled()
  })

  it(`should store a undelegation`, async () => {
    mutations.setUnbondingDelegations(state, {
      validator_addr: lcdClientMock.validators[0],
      balance: { amount: `100` },
      creation_height: `12`,
      min_time: new Date().toUTCString()
    })

    expect(state.unbondingDelegations[lcdClientMock.validators[0]]).toEqual({
      balance: { amount: `100` },
      creation_height: `12`,
      min_time: new Date().toUTCString()
    })
  })

  it(`should update the atoms on a delegation optimistically`, async () => {
    const commit = jest.fn()
    const delegates = lcdClientMock.state.candidates
    let stakingTransactions = {}
    stakingTransactions.delegations = [
      {
        validator: delegates[0],
        atoms: 109
      },
      {
        validator: delegates[1],
        atoms: 456
      }
    ]
    let committedDelegates = {
      [delegates[0].operator_address]: 10,
      [delegates[1].operator_address]: 50
    }

    await actions.submitDelegation(
      {
        rootState: mockRootState,
        state: {
          committedDelegates
        },
        dispatch: () => {},
        commit
      },
      { stakingTransactions }
    )

    expect(commit).toHaveBeenCalledWith(`setAtoms`, 435)
    expect(committedDelegates).toEqual({
      [delegates[0].operator_address]: 119,
      [delegates[1].operator_address]: 506
    })
  })

  it(`should update updateDelegates after delegation`, async () => {
    jest.useFakeTimers()
    let stakingTransactions = {}
    stakingTransactions.unbondings = [
      {
        validator: {
          operator_address: lcdClientMock.validators[0],
          delegator_shares: `100`,
          tokens: `100`
        },
        balance: {
          amount: `100`
        }
      }
    ]

    const dispatch = jest.fn()
    await actions.submitDelegation(
      { rootState: mockRootState, state, dispatch, commit: jest.fn() },
      { stakingTransactions }
    )
    jest.runAllTimers()
    expect(dispatch).toHaveBeenCalledWith(`updateDelegates`)
  })

  it(`should store an error if failed to load delegations`, async () => {
    const node = lcdClientMock
    const { state, actions } = delegationModule({ node })
    jest
      .spyOn(node, `getDelegations`)
      .mockImplementationOnce(async () => Promise.reject(`Error`))
    await actions.getBondedDelegates({
      state,
      rootState: mockRootState,
      commit: jest.fn(),
      dispatch: jest.fn()
    })
    expect(state.error).toBe(`Error`)
  })

  it(`should store an error if failed to load undelegations`, async () => {
    const node = lcdClientMock
    const { state, actions } = delegationModule({ node })
    jest
      .spyOn(node, `getUndelegations`)
      .mockImplementationOnce(async () => Promise.reject(`Error`))
    await actions.getBondedDelegates({
      state,
      rootState: mockRootState,
      commit: jest.fn(),
      dispatch: jest.fn()
    })
    expect(state.error).toBe(`Error`)
  })

  it(`should store an error if failed to load redelegations`, async () => {
    const node = lcdClientMock
    const { state, actions } = delegationModule({ node })
    jest
      .spyOn(node, `getRedelegations`)
      .mockImplementationOnce(async () => Promise.reject(`Error`))
    await actions.getBondedDelegates({
      state,
      rootState: mockRootState,
      commit: jest.fn(),
      dispatch: jest.fn()
    })
    expect(state.error).toBe(`Error`)
  })
})
